# Baba-Is-You-clone

./: README.md
BabaEstToi/: .gitignore  CMakeLists.txt  resources.qrc
BabaEstToi/levels/: Thumbs.db  level_2.txt  level_4.txt  level_S.txt  readme.txt
BabaEstToi/src/: CMakeLists.txt  main.cpp  mainwindow.ui
BabaEstToi/src/controller/: consolecontroller.cpp  consolecontroller.h  controller.cpp  controller.h  guicontroller.cpp  guicontroller.h
BabaEstToi/src/model/: CMakeLists.txt  baba.cpp  baba.h  enum.cpp  enum.h  filemanager.cpp  filemanager.h  gameobject.cpp  gameobject.h  level.cpp  level.h  text.h
BabaEstToi/src/observer/: observer.h  subject.cpp  subject.h
BabaEstToi/src/view/: babaChar.cpp  babahChar.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.cpp  view.h  viewconsole.cpp  viewconsole.h
BabaEstToi/tests/: CMakeLists.txt  levelTest.cpp  testLevel.cpp  testMyClass.cpp
Modélisation/: BabaIsYouUml.mdj
